--- a/actions/docker/action.yaml
+++ b/actions/docker/action.yaml
@@ -35,7 +35,7 @@ runs:
 
     - name: Build and push Docker image
       id: push
-      uses: docker/build-push-action@v4
+      uses: docker/build-push-action@v6
       with:
         file: "${{ inputs.context }}/${{ inputs.docker_file }}"
         context: ${{ inputs.context }}
@@ -45,3 +45,5 @@ runs:
           ${{ inputs.image }}:${{ inputs.version }}
           ${{inputs.image }}:latest
         labels: ${{ steps.meta.outputs.labels }}
+        build-args: |
+          GITHUB_TOKEN=${{ inputs.gh_token }}
