--- a/actions/docker/action.yaml
+++ b/actions/docker/action.yaml
@@ -33,12 +33,16 @@ runs:
       with:
         images: ${{ inputs.image }}
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
     - name: Build and push Docker image
       id: push
       uses: docker/build-push-action@v6
       with:
         file: "${{ inputs.context }}/${{ inputs.docker_file }}"
         context: ${{ inputs.context }}
+        platforms: linux/amd64,linux/arm64
         push: true
         tags: |
           ${{ inputs.image }}:${{ inputs.version }}
