--- a/actions/docker/action.yaml
+++ b/actions/docker/action.yaml
@@ -17,9 +17,28 @@ inputs:
   gh_token:
     description: docker context
     required: true
+  build-contexts:
+    description: docker context
+    required: false
+    default: ""
+  platforms:
+    description: platforms to build
+    required: false
+    default: "linux/amd64,linux/arm64"
 runs:
   using: 'composite'
   steps:
+    - name: Set up Docker
+      uses: docker/setup-docker-action@v4
+      with:
+        daemon-config: |
+          {
+            "debug": true,
+            "features": {
+              "containerd-snapshotter": true
+            }
+          }   
+
     - name: Log in to the Container registry
       uses: docker/login-action@v3
       with:
@@ -40,11 +59,16 @@ runs:
       id: push
       uses: docker/build-push-action@v6
       with:
+        build-contexts: |
+          ${{ inputs.build-contexts }}
         file: "${{ inputs.context }}/${{ inputs.docker_file }}"
         context: ${{ inputs.context }}
-        platforms: linux/amd64,linux/arm64
+        platforms: ${{  inputs.platforms }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
         push: true
         tags: |
+          ${{ steps.meta.outputs.tags }}
           ${{ inputs.image }}:${{ inputs.version }}
         labels: ${{ steps.meta.outputs.labels }}
         build-args: |
