fix: add GH TOKEN secret

--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -26,7 +26,7 @@ jobs:
         with:
           node-version: 'lts/*'
 
-      - uses: ./actions/version-next
+      - uses: vitech-team-sdlc/pipelines/actions/version-next@main
         id: extract_version
         with:
           dry-run: 'true'
