--- a/.github/workflows/publish_version.yaml
+++ b/.github/workflows/publish_version.yaml
@@ -31,7 +31,7 @@ jobs:
         with:
           node-version: 'lts/*'
 
-      - uses: ./actions/version-next
+      - uses: vitech-team-sdlc/pipelines/actions/version-next@main
         id: extract_version
         with:
           dry-run: 'false'
