--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -4,6 +4,13 @@ on:
   workflow_dispatch:
 
   workflow_call:
+    secrets:
+      GH_TOKEN:
+        description: "GitHub Token"
+        required: true
+      SLACK_WEBHOOKL:
+        description: "Slack Webhook"
+        required: true
     outputs:
       version:
         description: "next version"
