fix: add GH TOKEN secret

--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -5,7 +5,7 @@ on:
 
   workflow_call:
     secrets:
-      GH_TOKEN:
+      GITHUB_TOKEN:
         description: "GitHub Token"
         required: true
       SLACK_WEBHOOK:
