--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -5,7 +5,7 @@ on:
 
   workflow_call:
     secrets:
-      GITHUB_TOKEN:
+      GH_TOKEN:
         description: "GitHub Token"
         required: true
       SLACK_WEBHOOK:
@@ -38,3 +38,5 @@ jobs:
         with:
           dry-run: 'true'
           use-default-config: 'false'
+          token: ${{ secrets.GH_TOKEN }}
+          slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
