--- a/actions/version-next/action.yaml
+++ b/actions/version-next/action.yaml
@@ -10,6 +10,12 @@ inputs:
     description: Run semantic-release in dry-run mode
     required: false
     default: 'true'
+  token:
+    description: Github token
+    required: true
+  slack_webhook:
+    description: Slack webhook url
+    required: true
 runs:
   using: 'composite'
   steps:
@@ -51,8 +57,8 @@ runs:
       shell: bash
       if: ${{ inputs.dry-run == 'true' }}
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+        GITHUB_TOKEN: ${{ inputs.token }}
+        SLACK_WEBHOOK: ${{ inputs.slack_webhook }}
       #language="bash"
       run: |
         npx -p semantic-release-slack-bot -p @semantic-release/exec semantic-release --dry-run
@@ -61,8 +67,8 @@ runs:
       shell: bash
       if: ${{ inputs.dry-run == 'false' }}
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+        GITHUB_TOKEN: ${{ inputs.token }}
+        SLACK_WEBHOOK: ${{ inputs.slack_webhook }}
       #language="bash"
       run: |
         npx -p semantic-release-slack-bot -p @semantic-release/exec semantic-release --dry-run
