fix: add SEMANTIC_RELEASE_PACKAGE env variable to action.yaml
This ensures the repository name is passed as an environment variable for semantic-release. It improves compatibility and functionality for release-related workflows.

--- a/actions/version-next/action.yaml
+++ b/actions/version-next/action.yaml
@@ -59,6 +59,7 @@ runs:
       env:
         GITHUB_TOKEN: ${{ inputs.token }}
         SLACK_WEBHOOK: ${{ inputs.slack_webhook }}
+        SEMANTIC_RELEASE_PACKAGE: ${{ github.repository}}
       #language="bash"
       run: |
         npx -p semantic-release-slack-bot -p @semantic-release/exec semantic-release --dry-run
@@ -69,6 +70,7 @@ runs:
       env:
         GITHUB_TOKEN: ${{ inputs.token }}
         SLACK_WEBHOOK: ${{ inputs.slack_webhook }}
+        SEMANTIC_RELEASE_PACKAGE: ${{ github.repository}}
       #language="bash"
       run: |
         npx -p semantic-release-slack-bot -p @semantic-release/exec semantic-release --dry-run
