fix: Add GH_TOKEN to environment and remove dry-run flag.

--- a/.github/workflows/publish_version.yaml
+++ b/.github/workflows/publish_version.yaml
@@ -43,3 +43,5 @@ jobs:
         with:
           dry-run: 'false'
           use-default-config: 'false'
+          token: ${{ secrets.GH_TOKEN }}
+          slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
