feat: add action to update properties in TOML files
Introduced a new script and GitHub Action for updating properties in TOML files. The script preserves the original file structure and supports type-parsing for values. Added necessary dependencies in `pyproject.toml`.

--- a/actions/toml/action.yaml
+++ b/actions/toml/action.yaml
@@ -19,4 +19,4 @@ runs:
     - name: updating toml property
       shell: bash
       # language=bash
-      run: python3 ${{ actions.toml.action_path }}/main.py ${{ inputs.file }} ${{ inputs.property }} ${{ inputs.value }}
+      run: python3 ${{ github.action_path }}/main.py ${{ inputs.file }} ${{ inputs.property }} ${{ inputs.value }}
