fix(action): add commitlint verification action

--- a/actions/commits/commitlint/action.yaml
+++ b/actions/commits/commitlint/action.yaml
@@ -48,7 +48,7 @@ runs:
     - uses: LouisBrunner/checks-action@v2.0.0
       if: ${{ inputs.publish == 'true' }}
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ inputs.token }}
         name: 🌚 Commitlint
         conclusion: ${{ job.status }}
         output: |
