--- a/actions/commits/commitlint/action.yaml
+++ b/actions/commits/commitlint/action.yaml
@@ -45,11 +45,26 @@ runs:
         echo "summary=$(cat commitlint.log)" >> $GITHUB_OUTPUT
         cat commitlint.log
 
-    - uses: LouisBrunner/checks-action@v2.0.0
-      if: ${{ inputs.publish == 'true' }}
+    - name: "Create a check run"
+      uses: actions/github-script@v6
       with:
-        token: ${{ inputs.token }}
-        name: 🌚 Commitlint
-        conclusion: ${{ job.status }}
-        output: |
-          {"summary":"${{ steps.commitlint.outputs.summary }}"}
+        debug: ${{ secrets.ACTIONS_STEP_DEBUG || false }}
+        script: |
+          // Read the commitlint.log content
+          const fs = require('fs');
+          const commitlintLog = fs.readFileSync('commitlint.log', 'utf8');
+
+          // Create the check run
+          await github.rest.checks.create({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            head_sha: context.sha,
+            name: "🌚Commitlint",
+            status: "completed",
+            conclusion: context.job.status === "success" ? "success" : "failure",
+            output: {
+              title: "🌚Commitlint",
+              summary: `Commitlint ${context.job.status}`,
+              text: commitlintLog,
+            },
+          });
