--- a/.github/workflows/publish_version.yaml
+++ b/.github/workflows/publish_version.yaml
@@ -4,6 +4,12 @@ on:
   workflow_dispatch:
 
   workflow_call:
+    inputs:
+      pull-latest:
+        description: "Pull latest changes"
+        required: false
+        default: "false"
+        type: boolean
     secrets:
       GH_TOKEN:
         description: "GitHub Token"
@@ -32,6 +38,18 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Pull Latest Changes
+        if: ${{ inputs.pull-latest == 'true' }}
+        shell: bash
+        run: |
+          # Use GitHub’s default_branch if available, otherwise fall back to 'main'
+          DEFAULT_BRANCH="${{ github.event.repository.default_branch }}"
+          if [ -z "$DEFAULT_BRANCH" ]; then
+            echo "No default_branch found from event context, falling back to 'main'."
+            DEFAULT_BRANCH="main"
+          fi
+          git pull origin "$DEFAULT_BRANCH"
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
