--- a/.github/workflows/publish_version.yaml
+++ b/.github/workflows/publish_version.yaml
@@ -8,7 +8,7 @@ on:
       pull-latest:
         description: "Pull latest changes"
         required: false
-        default: "false"
+        default: false
         type: boolean
     secrets:
       GH_TOKEN:
