--- a/actions/commits/commitlint/action.yaml
+++ b/actions/commits/commitlint/action.yaml
@@ -54,7 +54,7 @@ runs:
           const commitlintLog = fs.readFileSync('commitlint.log', 'utf8');
           
           const pullRequest = github.context.payload.pull_request
-          const conclusion: 'success' | 'failure' = "success"
+          const conclusion = "success"
           const headSha = (pullRequest && pullRequest.head.sha) || github.context.sha
           core.info(`ℹ️ Posting with conclusion '${conclusion}' to ${link} (sha: ${headSha}) job: ${context.job.status}`)
 
