--- a/actions/commits/commitlint/action.yaml
+++ b/actions/commits/commitlint/action.yaml
@@ -45,7 +45,7 @@ runs:
 #        cat commitlint.log
 
     - name: "Create a check run"
-      uses: actions/github-script@v6
+      uses: actions/github-script@v7
       with:
         #language=javascript
         script: |
@@ -53,7 +53,7 @@ runs:
           const fs = require('fs');
           const commitlintLog = fs.readFileSync('commitlint.log', 'utf8');
           
-          const pullRequest = github.context.payload.pull_request
+          const pullRequest = context.payload.pull_request
           const conclusion = "success"
           const headSha = (pullRequest && pullRequest.head.sha) || github.context.sha
           core.info(`ℹ️ Posting with conclusion '${conclusion}' to ${link} (sha: ${headSha}) job: ${context.job.status}`)
