--- a/actions/commits/commitlint/action.yaml
+++ b/actions/commits/commitlint/action.yaml
@@ -56,6 +56,7 @@ runs:
           const pullRequest = context.payload.pull_request
           const conclusion = "success"
           const headSha = (pullRequest && pullRequest.head.sha) || context.sha
+          const link = pullRequest?.html_url || "[no PR link]"
           core.info(`ℹ️ Posting with conclusion '${conclusion}' to ${link} (sha: ${headSha}) job: ${context.job.status}`)
 
           await github.rest.checks.create({
