--- a/actions/commits/commitlint/action.yaml
+++ b/actions/commits/commitlint/action.yaml
@@ -45,7 +45,7 @@ runs:
 #        cat commitlint.log
 
     - name: "Create a check run"
-      uses: actions/github-script@v7
+      uses: actions/github-script@v6
       with:
         #language=javascript
         script: |
@@ -54,7 +54,7 @@ runs:
           const commitlintLog = fs.readFileSync('commitlint.log', 'utf8');
           
           const pullRequest = context.payload.pull_request
-          const conclusion = "success"
+          const conclusion = "${{ steps.commitlint.conclusion }}"
           const headSha = (pullRequest && pullRequest.head.sha) || context.sha
           const link = pullRequest?.html_url || "[no PR link]"
           core.info(`ℹ️ Posting with conclusion '${conclusion}' to ${link} (sha: ${headSha}) job: ${context.job.status}`)
@@ -63,12 +63,12 @@ runs:
             owner: context.repo.owner,
             repo: context.repo.repo,
             head_sha: headSha,
-            name: "🌚Commitlint",
+            name: "🌚 Commitlint",
             status: "completed",
             conclusion: conclusion,
             output: {
-              title: "1🌚Commitlint",
-              summary: `2Commitlint ${context.job.status}`,
-              text: "3text",
-            },
+              title: "🌚Commitlint",
+              summary: `commit lint config used: commitlint.config.cjs`,
+              text: commitlintLog
+            }
           });
