--- a/.github/workflows/poetry-checks.yaml
+++ b/.github/workflows/poetry-checks.yaml
@@ -19,24 +19,24 @@ on:
         default: "."
         type: string
     secrets:
-        GH_TOKEN:
-            description: "GitHub Token"
-            required: true
-        PAT:
-            description: "Personal Access Token"
-            required: false
+      GH_TOKEN:
+        description: "GitHub Token"
+        required: true
+      PAT:
+        description: "Personal Access Token"
+        required: false
 permissions:
-    contents: read
-    issues: read
-    checks: write
-    pull-requests: write
+  contents: read
+  issues: read
+  checks: write
+  pull-requests: write
 jobs:
   lint-and-test:
     name: Code Quality
     runs-on: ubuntu-latest
     env:
-        PYTHON_VERSION: ${{ inputs.python_version }}
-        POETRY_VERSION: ${{ inputs.poetry_version }}
+      PYTHON_VERSION: ${{ inputs.python_version }}
+      POETRY_VERSION: ${{ inputs.poetry_version }}
     defaults:
       run:
         working-directory: ${{ inputs.dir }}
@@ -66,7 +66,7 @@ jobs:
 
       - name: ⇣ Install Packages
         shell: bash
-        run: sudo apt install portaudio19-dev alsa-utils
+        run: sudo apt-get install -y --no-install-recommends portaudio19-dev alsa-utils
 
       - name: ⇣ Install dependencies
         shell: bash
@@ -90,11 +90,26 @@ jobs:
           token: ${{ secrets.GH_TOKEN }}
           title: '☂️ Coverage: ${{ inputs.dir }}'
 
+      - name: Get changed Python files
+        id: changed-files
+        uses: tj-actions/changed-files@v45
+        with:
+          files: |
+            **/*.py
+
       - name: 😑 Run Ruff
         continue-on-error: true
         shell: bash
-        #language="shell"
-        run: poetry run ruff check --output-format junit -o ruff.junit.xml .
+        #language=shell
+        run: |
+          if [ "${{ steps.changed-files.outputs.any_changed }}" == 'true' ]; then
+            echo "Linting the following changed Python files:"
+            echo "${{ steps.changed-files.outputs.all_changed_files }}"
+          
+            poetry run ruff check --output-format junit -o ruff.junit.xml ${{ steps.changed-files.outputs.all_changed_files }}
+          else
+            echo "No changed Python files detected."
+          fi
 
       - name: 🎁 Publish Ruff
         uses: mikepenz/action-junit-report@v5
