--- a/actions/poetry/update-pyproject-version/action.yaml
+++ b/actions/poetry/update-pyproject-version/action.yaml
@@ -27,7 +27,7 @@ runs:
         git config user.email "github-actions[bot]@users.noreply.github.com"
 
         # Check if there is any change to commit
-        if [ -n "$(git status --porcelain pyproject.toml)" ]; then
+        if [ -n "$(git status --porcelain ${{ inputs.pyproject-toml }})" ]; then
           echo "Changes detected in pyproject.toml. Committing..."
           git add pyproject.toml
           git commit -m "chore: update pyproject.toml to version $VERSION"
