--- a/actions/docker/action.yaml
+++ b/actions/docker/action.yaml
@@ -30,6 +30,14 @@ runs:
   steps:
     - name: Set up Docker
       uses: docker/setup-docker-action@v4
+      with:
+        daemon-config: |
+          {
+            "debug": true,
+            "features": {
+              "containerd-snapshotter": false
+            }
+          }   
 
     - name: Log in to the Container registry
       uses: docker/login-action@v3
