--- a/actions/docker/action.yaml
+++ b/actions/docker/action.yaml
@@ -25,6 +25,10 @@ inputs:
     description: platforms to build
     required: false
     default: "linux/amd64,linux/arm64"
+  push:
+    description: push to registry
+    required: false
+    default: "true"
 runs:
   using: 'composite'
   steps:
@@ -68,7 +72,7 @@ runs:
         platforms: ${{  inputs.platforms }}
 #        cache-from: type=gha
 #        cache-to: type=gha,mode=max
-        push: true
+        push: ${{ inputs.push }}
         secrets: |
           GITHUB_TOKEN=${{ inputs.gh_token }}
         tags: |
