feat(docker): make push behavior configurable
Added a new input `push` to allow configuration of whether to push to the registry. Updated the build steps to use the `push` input dynamically.

--- a/actions/docker/action.yaml
+++ b/actions/docker/action.yaml
@@ -39,7 +39,7 @@ runs:
           {
             "debug": true,
             "features": {
-              "containerd-snapshotter": false
+              "containerd-snapshotter": true
             }
           }   
 
