feat(pipeline): add working directory input for semantic-release
Introduced a `working-dir` input for defining the working directory in semantic-release workflows. Updated relevant action configuration and steps to utilize this input. Removed specific IntelliJ `.idea` files from `.gitignore` and replaced with a general `.idea` directory exclusion.

--- a/.github/workflows/publish_version.yaml
+++ b/.github/workflows/publish_version.yaml
@@ -10,6 +10,11 @@ on:
         required: false
         default: false
         type: boolean
+      working-dir:
+        description: "Working directory for semantic-release operations"
+        required: false
+        default: '.'
+        type: string
     secrets:
       GH_TOKEN:
         description: "GitHub Token"
@@ -63,3 +68,4 @@ jobs:
           use-default-config: 'false'
           token: ${{ secrets.GH_TOKEN }}
           slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
+          working-dir: ${{ inputs.working-dir }}
